--- a/app/index.html
+++ b/app/index.html
@@ -7,18 +7,18 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<title>Simple Mobile App</title>
 	<!-- build:css:dest assets/css/vendor.min.css -->
-	<link href="components/ratchet/2.0.2/css/ratchet.css" rel="stylesheet">
-	<link href="components/font-awesome/4.2.0/css/font-awesome.css" rel="stylesheet">
+	<link href="bower_components/ratchet/dist/css/ratchet.css" rel="stylesheet">
+	<link href="bower_components/components-font-awesome/css/font-awesome.css" rel="stylesheet">
 	<!-- /build -->
 	<!-- build:css:dest assets/css/application.min.css -->
 	<link href="assets/css/application.css" rel="stylesheet">
 	<!-- /build -->
 	<!-- build:js:dest assets/js/vendor.min.js -->
-	<script src="components/angular/1.3.0/angular.js"></script>
-	<script src="components/angular/1.3.0/angular-route.js"></script>
-	<script src="components/angular-translate/2.4.2/angular-translate.js"></script>
-	<script src="components/angular-translate/2.4.2/angular-translate-loader-static-files.js"></script>
-	<script src="components/ratchet/2.0.2/js/ratchet.js"></script>
+	<script src="bower_components/angular/angular.js"></script>
+	<script src="bower_components/angular-route/angular-route.js"></script>
+	<script src="bower_components/angular-translate/angular-translate.js"></script>
+	<script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
+	<script src="bower_components/ratchet/dist/js/ratchet.js"></script>
 	<!-- /build -->
 	<!-- build:js:dest assets/js/application.min.js -->
 	<script src="assets/js/application.js"></script>
