--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
 	<link href="assets/css/application.css" rel="stylesheet">
 	<!-- /build -->
 	<!-- build:js:dest assets/js/vendor.min.js -->
+	<script src="bower_components/jquery/dist/jquery.js"></script>
 	<script src="bower_components/angular/angular.js"></script>
 	<script src="bower_components/angular-route/angular-route.js"></script>
 	<script src="bower_components/angular-translate/angular-translate.js"></script>
